[package]
name = "swap"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "swap"
path = "src/bin/swap.rs"